feat: add GitHub API path proxy support

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
         {
             "source": "/ghapi", 
             "destination": "https://api.github.com"
+        },
+        {
+            "source": "/ghapi/:path*",
+            "destination": "https://api.github.com/:path*"
         }
     ]
 }
